= Version History =
x.x:
- fixed: PHP notice undeclared variable
- fixed: PHP warning in content_stats widget
- fixed: PHP undefined index warnings in web_services.php
- fixed: error in subsite profile field configuration
- fixed: wrong handling of metastring based objects hook
- fixed: page owner not found in Tidypics

2.1 (2013-04-05):
- changed: made compatible with Elgg 1.8.14
- fixed: deprecated notice in pages/subsites/list.php

2.0 (2012-07-12):

- fixed: no_access forward to last page if can join
- fixed: plugin settings reset (memcache issue)
- fixed: error on advanced site update for super admins
- fixed: problem with site email address
- removed: sharing with subsite acls on main site

2.0 beta 1 (2012-05-14):

- first version for Elgg 1.8

1.18 (2012-01-03):

- added: groups.php core file for modifications
- fixed: container_permissions_check for subsite admins
- fixed: reset translation_editor cache on "upgrade all"
- fixed: invite link on subsites
- changed: email invitations for subsites are now stored and checked in lowercase

1.17 (2011-11-15):

- added: some stats in subsite admin listing, can be user for cleanup)
- changed: robots indexing
- changed: filtering of subsites (now tabbed)
- changed: search listing view of subsites
- changed: remove subsite only for mziemerink
- removed: subsites listing for admins (used for management), now use default subsite listing

1.16 (2011-10-05):

- added: non public subsites will no longer be indexed by search robots
- added: non subsite members will no longer be indexed by search robots
- fixed: reset password not working for subsite admins
- fixed: error when removing last subsite admin on subsite
- changed: adminlinks for subsite admins
- removed: profile/menu/actions extend for subsite admins => moved to admin links

1.15 (2011-09-28):

- fixed: support for 1.7.11
	
1.14 (2011-09-23):

- added: if user joins a group on a subsite he/she can join, the user is added to the subsite